Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43815

qdoc: single-exec mode unable to generate .qhp files correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0
    • 5.5.0
    • Build tools: qdoc
    • None

    Description

      When run in single-exec mode and passing multiple .qdocconf files, the Qt Help Project (.qhp) file is generated only for the first one.

      Attachments

        For Gerrit Dashboard: QTBUG-43815
        # Subject Branch Project Status CR V

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes